# ChangeLog for dev-python/django-recaptcha
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/django-recaptcha/ChangeLog,v 1.10 2014/05/10 23:43:59 patrick Exp $

  10 May 2014; Patrick Lauer <patrick@gentoo.org> django-recaptcha-1.0.ebuild:
  Fix python_compat until django catches up

*django-recaptcha-1.0 (10 May 2014)

  10 May 2014; Ian Delaney <idella4@gentoo.org> +django-recaptcha-1.0.ebuild:
  bump; drop py2.6 add pypy support, test dep & phase

*django-recaptcha-0.0.9 (26 Apr 2014)

  26 Apr 2014; Ian Delaney <idella4@gentoo.org> +django-recaptcha-0.0.9.ebuild:
  bump; add py3 support

  30 Mar 2014; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer as talked with him (#398377)

*django-recaptcha-0.0.6-r2 (01 Jun 2013)

  01 Jun 2013; Ian Delaney <idella4@gentoo.org>
  +django-recaptcha-0.0.6-r2.ebuild, +files/test_settings.py,
  -django-recaptcha-0.0.4.ebuild, -django-recaptcha-0.0.5.ebuild,
  -django-recaptcha-0.0.6-r1.ebuild, -django-recaptcha-0.0.6.ebuild,
  files/django-recaptcha-fields.patch, files/django-recaptcha-settings.patch:
  revbump, drop pypy to match django, edit recaptcha-fields patch to import
  added missing source file, add nose for test phase, drop old

*django-recaptcha-0.0.6-r1 (06 Mar 2013)

  06 Mar 2013; Ian Delaney <idella4@gentoo.org>
  +django-recaptcha-0.0.6-r1.ebuild, +files/django-recaptcha-fields.patch,
  +files/django-recaptcha-settings.patch, django-recaptcha-0.0.6.ebuild:
  Patches added for testsuite, migrated to distutils-r1

*django-recaptcha-0.0.6 (22 Feb 2013)

  22 Feb 2013; Patrick Lauer <patrick@gentoo.org>
  +django-recaptcha-0.0.6.ebuild:
  Bump

*django-recaptcha-0.0.5 (25 Oct 2012)

  25 Oct 2012; Corentin Chary <iksaif@gentoo.org>
  +django-recaptcha-0.0.5.ebuild:
  Bump to 0.0.5.

  30 Sep 2012; Corentin Chary <iksaif@gentoo.org> metadata.xml:
  Update my mail.

*django-recaptcha-0.0.4 (02 Aug 2012)
