@@ -1,11 +1,23 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX django-recaptcha-fields.patch 602 SHA256 4ef9666f69296a652e5758d36f624802555b2eda072fd93ca7b78a8288716cbf SHA512 fbaee993b0bdf572e3d96e1f87ef33276dba3b9d4d4f5e6736d808402d5d71077a9b7d47752e3b2332b80df45d8b376d3103aead8ce9d442ac41895ebc4bdf82 WHIRLPOOL f95af9ee906b5aebbf11e060e0a355314d831f5bbb253918e30f0ec004bbca7c21d10d73b783757b012b088e9b17e3285959f5e05b1215a9ee89a16b97dbbe09
 AUX django-recaptcha-settings.patch 283 SHA256 2e9ec0842424f5347e906101ebe6e1def490c76b8b45fbed49b44bd2a444abbd SHA512 cfa960e6c372724bb0c691da3e574927ae51db7d7b3f056547188ee115a915719a926b6c1d366c0df3696db49ff28cefcd06aad090f387aee90effbcf68956b2 WHIRLPOOL 577feebd158cb8d7fb7cf1e04b5cce4fed4add409f9e7d05de6dff59c2f55b091081075c9d87eff9da419465f16d633021eea6dca27572e18aea74bf526ded62
 AUX test_settings.py 314 SHA256 fc4e2ef008cb73b83a9856fd884df7992b48c5c3d7114c24d9727bc2fe09d46f SHA512 044f557d5dcfdb11d55cd55aec6830b9763ff40d7a33407fe55b86820a5a8ecb6b57fc1c121655bd86f0d369e64194b6a4aa87bddb4476d22656c48349609f32 WHIRLPOOL 2035bc6d304417be63a71352de62c4a9e3a2d636092e6e9015fb4c38e98bad2a67fb5b18e8b12e2484d0bdafc605ac00ef66ede0e43aa679bd5e7e5bfb59cc1c
 DIST django-recaptcha-0.0.6.tar.gz 7614 SHA256 15e17c331a9a6ac7c8159c2866fb6b58d9561a55db3694393e3cbad9e2494202 SHA512 152a62c914a10ff511a17c4e0a5accffac6f5043ee6516b81c5fe69d9271e7982f5df7cf96d4e1668fbfaa47600ed95cae818037a25756786092f4a9e9301ae2 WHIRLPOOL bbc4de11b0384b067343f6a7e8f06627b781ccc91cb43adbff3a399983eabeeea1596d7552d35791b0b80ccf31582bf3e83e38b4fdd885b1dfa2087750eb9483
 DIST django-recaptcha-0.0.9.tar.gz 7884 SHA256 988d79783304ac1e0da64cb0624a69059adeec9e5f61370c4b01eb1b0867b230 SHA512 baa91e966e0e3a553fe78fe8e15d89418860035c72aaafec30da6917d3243cb224a1a0ed2bec2e4e037b59a6a56d68b17df60c1a162484f6a4efbdd6196c43c6 WHIRLPOOL 35ec289f3a9ac3d12fd2a6566fc94be87642df2df952690b620f088084c215fade37631d1140e7050f2d823c7330f64a90565e19e3c76999c69c527ac922a17f
+DIST django-recaptcha-1.0.2.tar.gz 10657 SHA256 03d5b4414894e4a9f2dabd8fa536c2595367c5b5760e0e6142c82b5faf31a355 SHA512 b715f1dcac0665f6a2186e4069d0189fd435a4c596243e0cea59240be06a00f3621f68b38a4aec63b77890bad2e735de9b192c3f99df9f6a44527e45071bc711 WHIRLPOOL 160f1ab7f6e925dd79b62079576f16f5659b2aacbc0fd45dfd5a4d520b26022d07e94244960669e025e4cf08ac96695fe19698983c73cbdabb207e2611db7d47
 DIST django-recaptcha-1.0.tar.gz 9395 SHA256 799417e17a979009e8cc84aacc01aa72490de7da2f4379979528a1bf78f91bbf SHA512 2d4f3c6efca596e4a29f0f338898114d4c3e69f0d2459c206cdc141f55fbe671154a06308512856ef39b35e3b299c0c6aabe2f407516abbe89e7932c7a5ede72 WHIRLPOOL 537ddb81d00796c24833ee1272995e81a23ec7eac19b110e82fcdc4496724077700a49f58a41ebe2144a708699efbdbbab0d4d71a26df6cc4feb5855c42c853c
 EBUILD django-recaptcha-0.0.6-r2.ebuild 1240 SHA256 2cef0a33292b3079fb0de0789843231c187ad8593d3ab3420c5d4d05dee45cb8 SHA512 f231e6b48c9e4a276e7719b9874f3e7359f04c9a66570fb63716eed2a54d776b1dd0910593e5fd7f839edf965a5d7facc871355e4a73988c080f439d57ae19db WHIRLPOOL f1f8ef3cf5a136b8ad60d33c44e2993bce42bfd1f8e5a7955d08b2ac21849a5fab480d358d4af187e2a2611e6bdffe838dc23c767f39e0f6e17ef36a75653049
 EBUILD django-recaptcha-0.0.9.ebuild 764 SHA256 eafc883fcf125ef694a4244aa5adbccbc5cf852ec983f27623d42e9f3e858199 SHA512 160d4a4d3b09e77cec8a9914bc49de0497a94fd2cac2ed1fc4fdadf10039dcf21e48c67382075895c25e7b50f61748ab328a289c505767c46f2493f6d8fe868d WHIRLPOOL 13de95d0777e29bd9a5ebf5748f3a6ee67728642eff1ad08bad6bbfe980dd5de232563b83181177898b2acdcbe7b0ea99a20122b105bbe5c567d4f88eadfc28f
+EBUILD django-recaptcha-1.0.2.ebuild 958 SHA256 355accf23f0ade33729e0325bfd91af4add574dc11b3a6ba3f8ca9b34bb3767b SHA512 0dca23794ee7872930b261012df8339da99e817b4ae8cd32d4a57631afaff21650a22cd1d822ed068f0db19231bac133a9fa04a65630ce53eea008815376294c WHIRLPOOL 6b41a874a4c6d1b3d6968e0a7cc15c731e4b72c650f4c7999091b82baba0d2b7e87d9e904e9f5ec688168ac7ae69c52dc151d70271e9073fbc109eb3d1683a0c
 EBUILD django-recaptcha-1.0.ebuild 904 SHA256 f4c72cb1ba04537d2178cb96626c97d5e4e7aac144e0095708c3a0d812a1658b SHA512 af0d202da8115bd9895feadf8cf4a1cdfb67637ddd54ad7d2eecbe8fe51806f81970f0880bf8e718a7ecc0a627bcefcf39e8e9f7cf53e94cbbc2d2e971840bec WHIRLPOOL 1bdcbdfea6ac0c75665ae8d397614f2b794a0ed71a7d7b2af7dbf056eb6b38ead7e3a14028f79dbe625fc6cc7b2ca90c7f0cdcfb5947cc2e1ff6bd5c3b0cb1e5
-MISC ChangeLog 2082 SHA256 0b0872031548f65185b982af55d11317103897b8ed8b93da737197ddaecf3d4c SHA512 dee5c476900db1eabf49a274b40ff814e41636b9474719c7632440074595a7b1576012af066914980ff7f0971fd720f60797d08762256412af92a2064119c13c WHIRLPOOL a93bb3e1064e5bed609fec1a97a915fc1eb7d2debfb19e3eff23227e8ef4e2c905bee18d35feab4c988808f327f0cd1a0b28bf6944dba217406a5b22526f91e5
+MISC ChangeLog 2227 SHA256 84356625d6fc7ddab081cdcd9a75886f212202b4a74f032d143f7591e28939a2 SHA512 8553b661afc59bf89b9af6b0d465911a9e45e939dfc26d6ad5101b2eeb08b4c239f40299df4e23a916a50aac6c173ff42d9202363ffdaaa29e68fefb2a4f561d WHIRLPOOL 00b225141a5ec7e9579727a8fc91081e5a06d6255f2da22aa984f23c856dc3a227e7c7aff9f1ac744278250e24c2aaffacf68e98cd0fce5fffab34f72ed2fd34
 MISC metadata.xml 304 SHA256 378192a3036cb42703bb327998809796815f61188e51d27684cd19a8aac63ea8 SHA512 c3167aa9d0d69ef51ff219e10c69f8e5ff0674cc1b409ab9b401210f23eba3b38128feb5a31731a62303655916020c7a4660493f2ba8b5a7a03f170b78d761b9 WHIRLPOOL 68e5e98912c5673f75b9a7f53ae721b01433a2e662182c42541127e9e97ad24da1c51e57327395b09cfca1dff2537a223e2314a41330dcbacd36fe8945a367f5
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iEYEAREIAAYFAlQhePgACgkQso7CE7gHKw0xaQCg4pfWDR3rKL8XGxI6oR6vrtgn
+YbIAmwYUj66Om6cXQ/7t0N1quyhRzFXZ
+=irCQ
+-----END PGP SIGNATURE-----
