@@ -1,4 +1,25 @@
-DIST taglib-extras-1.0.1.tar.gz 31363 RMD160 d687119f4750a2f9eac415667c23552e50e12c72 SHA1 58af454ec230d494a75abd0aa78016a969f0c9ce SHA256 fe546b4b315f3227c975fed8ea9dfc0e54fc6997fdbba2a9da7beba479229632
-EBUILD taglib-extras-1.0.1.ebuild 634 RMD160 e24fc0e995799b5129a3764caa4dd58ce7d07cfb SHA1 9bd11b5d1518468119bffc6d8ccac66d4b994b3c SHA256 fbd3b1749cd0fa4a879384f0b58695451854b52aaea52ff424dd6b06255fd995
-MISC ChangeLog 1972 RMD160 05b3583c6b39b63989a4fb363e21d604dae077bb SHA1 0203ec0d7452c58eb4ac831593e3c7d63b7f5ef4 SHA256 8d9e4811db1aab0c41edc9eb93d14573fc90ffd3f948c5b4de2446a63bed2ed0
-MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST taglib-extras-1.0.1.tar.gz 31363 SHA256 fe546b4b315f3227c975fed8ea9dfc0e54fc6997fdbba2a9da7beba479229632 SHA512 282f9c9cde81a250d8d6f4416658167665044d53cd10d8ecfa490df60a1fb95e1309feb17f69963f8dbfccc83ebb76af7275c25339931117435f34a56c4f1a65 WHIRLPOOL f9d49e86d189bbc69047b5103e2395cf5deab62ef075ce5d83789d4ab8371be63c7a5e97faa99f6132f21fa06ecbd2fddaef6c79b4811c2f829102f62a817f44
+EBUILD taglib-extras-1.0.1.ebuild 649 SHA256 8e5c94dfb748bb5ee9dd4b3fd8bb80dba26e80d8214b320238c5ae34d82315e7 SHA512 a04a779af090973b37a2e9d7736e28e3f150e5f0d557454de5e3ad050361689e6bf9671ff3d59edb838725958b6b3e620f08f04024260b6d92480a91d3d1d8da WHIRLPOOL 1395d5e5a56492f26db2f4b606ef2bc1be48367ca49ae163a326451008826e3e2b53667a6d768b968d31e79253ddf9d2b076507f9962c3f582546432a74b56d5
+MISC ChangeLog 2096 SHA256 8ba5a83b33c87321dbb1fe36ed74f38d5361d78a6fcb4dafe8bf03a5f5cbcce7 SHA512 f79a51f45d9c88324f732f3fbb8ec92db248b5f40b3e540bb72005f2c8bb1a0ba4c248ca1b8b7239ee3f6586bfd4fe6fb925a52a0026a35e38d7cec7c26cc8d7 WHIRLPOOL d188406cee123920b91aec6a8acae54f4dfa70c3f234dafd259c79d7efd6d0e08c16c479d583dd6c734301e0971908de227c5fa638a9b55cdecdcb48032ce53b
+MISC metadata.xml 157 SHA256 01f6fa4357ce08e8b0f7900a51fa78c7f060fefc7c7da98acaec1e283dd59892 SHA512 657d6b0a31ceb7ac10bedfd5cbd634d4ff47938bd2f321203f0233e53686f7e0fd460e81f82793804895c7e97cfa472c1ca44b93314574262ee8cc5745a3efd0 WHIRLPOOL 785331909f1834cdd5d797ad484ea0e35c3e44c79a8a7517a6fb5de926acd181abd57910c8d960fb2e11ea38ddea336bca309af16fcc2df68fe4b602bca120b3
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0
+
+iQJiBAEBCABMBQJUIXe2RRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
+MTY5NkQ3RDM3NkRBN0U5QjZGMTUwMDZCMUYzOERDQTQ1QTFFQwAKCRAGsfONykWh
+7PVXD/0TAbYyPcHFDXza4EGC77LI9eww7P1jv2h7BaRveR6mn7iOTpesIFT0XpVU
+XAVS1vejX3Ja8Gxf4yynIVdYwtdqKPJvftpQYNj2DEFKR3VroUfCzd0sglub9hOL
+AuXQbThcBZRlEhBN8j3qUoAM1yU+jA/5/9NGKLlMfwQx8KK/o4ZOtNvS3m2tFHaB
+4Nggcu18pOLS41vbXEzCq4OXOcdWnTsu26b7TRymS0HzythORoyQSbtoe1DttXHp
+A1vK082LPmv8ZtU4eiMz2ZscUr4wOk/cs/eoE9xYu8zoZqkfM7zuybO3pEzWIHzT
+msvq4gDwLNliy9X42Gk0Sfr1SxQvNaEjCwWMpfgeK1RnE5ZJs7Gs1327x4pmMix3
++NLcAHp3An9wobzyR184O6VqSOhH1I0/ZOPfRIvOOFBVjqJMoagtGgwdo3cbLcFc
+HI1T/gsiymvl/D5wpfqLdWScCkSy42WDBZrKQ9xWNEcjHrA+jBAEWW//5cmnMHMO
+hF+Dfhev+FHnrbVYSZhltEPEFHhEGuPVi8S3twOZnw1u+a4U3FtrfV7Y8I6YKire
+8vNxxMNBxKtw468VIl4p+0ZJiTuBHQ2bWKb127vosDVZgYY4XJb8KiskVyhjeKxI
+1XT9m6i9K22Z2SMpAVMagnRInhwSjFF1Sn9Ph1jFTTN3s1puCw==
+=bt/4
+-----END PGP SIGNATURE-----
