@@ -8,6 +8,6 @@ KEYWORDS=amd64 ppc ~ppc64 x86
 LICENSE=GPL-2
 RDEPEND=>=media-libs/taglib-1.6
 SLOT=0
-SRC_URI=http://www.kollide.net/~jefferai/taglib-extras-1.0.1.tar.gz
+SRC_URI=http://dev.gentoo.org/~kensington/distfiles/taglib-extras-1.0.1.tar.gz
 _eclasses_=cmake-utils	da2974fcb060ec927e93a17c835afa67	eutils	32548a82e42dc26e3312581476d2f20c	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=701f9de1766052757953d74f47bb5fb6
+_md5_=0f479817cf5f21224b988fde335f0adf
