@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/taglib-extras
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/taglib-extras/ChangeLog,v 1.12 2011/01/18 22:31:26 ranger Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/taglib-extras/ChangeLog,v 1.13 2014/09/23 13:34:33 kensington Exp $
+
+  23 Sep 2014; Michael Palimaka <kensington@gentoo.org>
+  taglib-extras-1.0.1.ebuild:
+  Update SRC_URI wrt bug #523500.
 
   18 Jan 2011; Brent Baude <ranger@gentoo.org> taglib-extras-1.0.1.ebuild:
   Marking taglib-extras-1.0.1 ppc for bug 346233
@@ -59,4 +63,3 @@
   04 Jun 2009; Theo Chatzimichos <tampakrap@gentoo.org>
   +taglib-extras-0.1.3.ebuild, +metadata.xml:
   Initial commit of taglib-extras
-
