@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/django-recaptcha
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/django-recaptcha/ChangeLog,v 1.10 2014/05/10 23:43:59 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/django-recaptcha/ChangeLog,v 1.11 2014/09/23 13:52:43 idella4 Exp $
+
+*django-recaptcha-1.0.2 (23 Sep 2014)
+
+  23 Sep 2014; Ian Delaney <idella4@gentoo.org> +django-recaptcha-1.0.2.ebuild:
+  bump; add pypy support
 
   10 May 2014; Patrick Lauer <patrick@gentoo.org> django-recaptcha-1.0.ebuild:
   Fix python_compat until django catches up
